logs.jsp: fix layout problem on IE, move version info to the top

--- a/apps/routerconsole/jsp/default.css
+++ b/apps/routerconsole/jsp/default.css
@@ -16,6 +16,11 @@ img {
 	border: none;
 }
 
+pre {
+	width: 100%;
+	overflow-x: scroll;
+}
+
 div.logo {
 	float: left;
 	width: 200px;
